// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select_actions select Environment Filter Action Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "environment": "Webcam",
    "type": "ENVIRONMENT_TYPE",
  },
]
`;

exports[`select_actions select Media Filter Action Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "MEDIA_TYPE",
    "value": "Press",
  },
]
`;
